--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ padding: 3px 100px;
  <body bgcolor=white background="banner.jpg">
 <table width="100%">
   <tr>
-    <td><a href="home.html"><button class="button button1"><font size="3" face="Lucida console"><b>Home</button></b></td>
+    <td><a href="index.html"><button class="button button1"><font size="3" face="Lucida console"><b>Home</button></b></td>
     <td><a href="air.HTML"><button class="button button1"><font size="3" face="Lucida console"><b>Air</button></b></td>
     <td><a href="land.html"><button class="button button1"><font size="3" face="Lucida console"><b>Land</button></b></td>
     <td><a href="noise.html"><button class="button button1"><font size="3" face="Lucida console"><b>Noise</button></b></td>
