--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ padding: 3px 100px;
 <table width="100%">
   <tr>
     <td><a href="index.html"><button class="button button1"><font size="3" face="Lucida console"><b>Home</button></b></td>
-    <td><a href="air.HTML"><button class="button button1"><font size="3" face="Lucida console"><b>Air</button></b></td>
+    <td><a href="air.html"><button class="button button1"><font size="3" face="Lucida console"><b>Air</button></b></td>
     <td><a href="land.html"><button class="button button1"><font size="3" face="Lucida console"><b>Land</button></b></td>
     <td><a href="noise.html"><button class="button button1"><font size="3" face="Lucida console"><b>Noise</button></b></td>
     <td><a href="water.html"><button class="button button1"><font size="3" face="Lucida console"><b>Water</button></b></td>
@@ -58,19 +58,19 @@ There are mainly four types of pollution shown:</h3></td>
 
 <tr>
 <td colspan="2" padding="20px"><center><img src="air-pollution.jpg" height="200px" width="200px">
-<h3><u><a href="air.HTML">Air Pollution</a></u></h3></center>
+<h3><u><a href="air.html">Air Pollution</a></u></h3></center>
 <p><b>Air pollution refers to the release of pollutants into the air—pollutants which are detrimental to human health and the planet as a whole. According to the World Health Organization (WHO), each year air pollution is responsible for nearly seven million deaths.</b></p>
 </td>
 <td colspan="2" padding="20px"><center><img src="land-pollution.jpg" height="200px" width="200px">
-<h3><u><a href="land.HTML">Land Pollution</a></u></h3></center>
+<h3><u><a href="land.html">Land Pollution</a></u></h3></center>
 <p><b>Land pollution refers to the deterioration of the earth's land surfaces, at and below ground level. The cause is the accumulation of solid and liquid waste materials that contaminate groundwater and soil.</b></p>
 </td>
 <td colspan="2" padding="20px"><center><img src="noise-pollution.jpg" height="200px" width="200px">
-<h3><u><a href="noice.HTML">Noise Pollution</a></u></h3></center>
+<h3><u><a href="noice.html">Noise Pollution</a></u></h3></center>
 <p><b>Noise pollution, or sound pollution, is the propagation of noise or sound with ranging impacts on the activity of human or animal life, most of which are harmful to a degree. The source of outdoor noise worldwide is mainly caused by machines, transport and propagation systems.</b></p>
 </td>
 <td colspan="2" padding="20px"><center><img src="water-pollution.jpg" height="200px" width="200px">
-<h3><u><a href="water.HTML">Water Pollution</a></u></h3></center>
+<h3><u><a href="water.html">Water Pollution</a></u></h3></center>
 <p><b>Water pollution is the contamination of water sources by substances which make the water unusable for drinking, cooking, cleaning, swimming, and other activities. Pollutants include chemicals, trash, bacteria, and parasites.</b></p>
 </td>
 </tr>
